fixed element border overlap

--- a/chromium/pages/newdld/newdld.css
+++ b/chromium/pages/newdld/newdld.css
@@ -21,7 +21,7 @@ textarea {
     border-style: solid;
     border-width: 2px;
     left: 0px;
-    max-height: 155px;
+    max-height: 162px;
     overflow: hidden auto;
     position: absolute;
     top: 100%;
